button alignment fixed

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -109,6 +109,7 @@ body {
     }
     .start_btn {
       position: absolute;
+      left: 0;
       bottom: 0;
       width: 100%;
       .button {
